ros2_ws/log/build_2024-09-11_17-48-50/autonomo/stderr.log
  File "/home/emmanuel13/code/AyDpVA/ros2_ws/install/autonomo/lib/python3.12/site-packages/autonomo/publisherveh.py", line 33
    node.get_logger().info(f'"Velocidad: {data=speed} Km/h, Angulo: {data1=angle}°"')
                                               ^^^^^
SyntaxError: f-string: expecting '!', or ':', or '}'

